--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "yarn ts-node generatePCOGraphQL"
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
@@ -27,5 +28,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1"
   }
 }
