--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "generate": "pnpm ts-node generatePCOGraphQL"
   },
   "dependencies": {
-    "@apollo/server": "^4.9.5",
+    "@apollo/server": "^4.10.4",
     "@as-integrations/next": "^3.0.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.8",
     "encoding": "^0.1.13",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
-    "graphql": "^16.7.1",
+    "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
-    "graphql-yoga": "^5.0.0",
+    "graphql-yoga": "^5.3.1",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
@@ -30,7 +31,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1"
+    "@whatwg-node/fetch": "^0.9.17",
+    "ts-node": "^10.9.2"
   }
 }
-
